# explor_cargo-generate

./: README.md
a-proj/: Cargo.toml  README.md
a-proj/benches/: benchmarks.rs
a-proj/src/: custom_error.rs
template_example/: Cargo.toml  README.md  cargo-generate.toml  input1.txt
template_example/benches/: benchmarks.rs
template_example/src/: part1.rs  part2.rs
